--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express-async-errors": "^3.1.1",
     "mongoose": "^7.8.2",
     "mongoose-unique-validator": "^4.0.1",
-    "nodemon": "^3.1.7"
+    "nodemon": "^3.1.7",
+    "yahoo-finance2": "^2.13.2"
   }
 }
