--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "express-async-errors": "^3.1.1",
+    "express-slow-down": "^2.0.3",
+    "helmet": "^8.0.0",
     "mongoose": "^7.8.2",
     "mongoose-unique-validator": "^4.0.1",
     "nodemon": "^3.1.7",
